# lnp

./: .Board.cpp.swp  .Game.cpp.swp  .Search.cpp.swp  .clang-format  .gitignore  .main.cpp.swp  Bishop.cpp  Bishop.h  BitBoard.h  BitIterator.cpp  BitIterator.h  BitMove.cpp  BitMove.h  BitOps.cpp  BitOps.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Board.hpp  CMakeLists.txt  Definitions.cpp  Definitions.h  Evaluation.h  Evaluator.h  Game.cpp  Game.h  King.cpp  King.h  MoveOrdering.h  Openings.cpp  Openings.h  PV.h  Parser.cpp  Parser.h  Pawn.cpp  Pawn.h  Piece.cpp  Pieces.h  README.md  (+15 more)
bitpieces/: Bishop.cpp  Bishop.h  BitPawn.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
pieces/: .Pawn.cpp.swp  .Rook.cpp.swp  Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
readmes/: README.md  ayoub.agouzoul.md  rachid.tazi.readme.md  siyuan.lu.readme.md  youssef.seghrouchni.md
testing/: PerftTests.h  buggy.txt  buggy1.txt  debugging.txt  enpassant_1.txt  game1.txt  games.sh  lizzie  mvvlva  old  perftreesh.sh  runssh.txt  stronglogic
testing/openings_files/: csv_to_txt.py  openings.py
testing/performance/: analysis_v1.0-bb-13ae1f0b-postopti.txt  analysis_v1.0-bb-13ae1f0b-preopti.txt  analysis_v1.1-bb-post-openings.txt  analysis_v1.1-bb.txt  analysis_v1.1-magicbb.txt  analysis_v1.txt  perftspeeds.md
v1.0-to-upgrade/: Board.cpp  Board.h  Game.cpp  Game.h
v1.0-to-upgrade/pieces/: Bishop.cpp  Bishop.h  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.h  Rook.h
